force-app/main/default/objects/IF_Object__c/IF_Object__c.object-meta.xml
<CustomObject>
    <label>IF Object</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>