force-app/main/default/objects/IF_Object__c/fields/apiDatetime__c.field-meta.xml
<CustomField>
    <fullName>apiDatetime__c</fullName>
    <label>apiDatetime</label>
    <type>DateTime</type>
</CustomField>