force-app/main/default/objects/IF_Object__c/fields/InterfaceId__c.field-meta.xml
<CustomField>
    <fullName>InterfaceId__c</fullName>
    <label>InterfaceId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>