force-app/main/default/objects/IF_Object__c/fields/jsonBody1__c.field-meta.xml
<CustomField>
    <fullName>jsonBody1__c</fullName>
    <label>jsonBody1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>