force-app/main/default/objects/IF_Object__c/fields/jsonBody2__c.field-meta.xml
<CustomField>
    <fullName>jsonBody2__c</fullName>
    <label>jsonBody2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>