force-app/main/default/objects/IF_Object__c/fields/jsonBody3__c.field-meta.xml
<CustomField>
    <fullName>jsonBody3__c</fullName>
    <label>jsonBody3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>